# agentagnostic

./: .gitignore  README.md  pyproject.toml  run_proposer.py  workflow_optimizer_v0.ipynb
benchmarks/_graders/: contains.py  fanoutqa.py  game24.py  grid.py
benchmarks/aa_omniscience/: benchmark.yaml  data.jsonl
benchmarks/aime24_gen/: benchmark.yaml  data.jsonl
benchmarks/aime25_gen/: benchmark.yaml  data.jsonl
benchmarks/arc_agi_2/: benchmark.yaml  data.jsonl
benchmarks/bbeh_gen/: benchmark.yaml  data.jsonl
benchmarks/fanoutqa/: benchmark.yaml  data.jsonl
benchmarks/fanoutqa_judge/: benchmark.yaml
benchmarks/game24/: benchmark.yaml  data.jsonl
benchmarks/gpqa_diamond_gen/: benchmark.yaml  data.jsonl
benchmarks/gsm_plus_mini/: benchmark.yaml  data.jsonl
benchmarks/hle/: benchmark.yaml  data.jsonl
benchmarks/humaneval_plus_gen/: benchmark.yaml  data.jsonl
benchmarks/ifeval/: benchmark.yaml  data.jsonl
benchmarks/mbpp_plus/: benchmark.yaml  data.jsonl
benchmarks/minerva_math/: benchmark.yaml  data.jsonl
benchmarks/ml_papers_20260722/: benchmark.yaml  data.jsonl  sources.json
benchmarks/mmlu_pro/: benchmark.yaml  data.jsonl
config/: config.yaml
notebooks/: optimize.ipynb
prompts/: analyze_task.md  case_types.md  design_goal_improve.md  design_goal_initial.md  design_round.md  generate_examples.md  judge.md  research_task.md
scripts/: build_ml_papers.py  build_news_current.py  build_news_multihop.py  import_fanoutqa.py  import_routerllm_benchmarks.py  make_game24.py  recover_run_result.py
tests/: test_dashboard.py  test_offline.py
(+82 files in other folders)
