[project]
name = "agentagnostic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "claude-agent-sdk>=0.2.120",
    "matplotlib>=3.11.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.0",
]

[project.scripts]
workflow-optimizer = "workflow_optimizer.cli:main"
workflow-optimizer-ui = "workflow_optimizer.dashboard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_optimizer"]
artifacts = ["src/workflow_optimizer/dashboard/static/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
